标签切换，动态组件。

--- a/src/components/navi/navi.css
+++ b/src/components/navi/navi.css
@@ -4,6 +4,7 @@
     width: 20%;
     background-color: #1C1C1C;
     box-sizing: border-box;
+    height: 100%;
 }
 
 .navi-ol {
@@ -16,6 +17,7 @@
     height: 30px;
     display: flex;
     padding-left: 20px;
+    cursor: pointer;
 }
 
 .navi-title {
