--- a/src/components/page/navigation/style.css
+++ b/src/components/page/navigation/style.css
@@ -1,10 +1,11 @@
 .navi {
     margin: 0;
     padding: 0;
-    width: 20%;
+    width: 180px;
     background-color: #061539;
     box-sizing: border-box;
-    height: 100%;
+    height: 100vh;
+    position: absolute;
 }
 
 .navi-ol {
