--- a/src/components/page/content/redis/parts/client/body/db.css
+++ b/src/components/page/content/redis/parts/client/body/db.css
@@ -6,7 +6,8 @@
 }
 
 .left {
-    width: 20%;
+    width: 130px;
+    position: absolute;
 }
 
 .list{
@@ -22,7 +23,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    height: 100px;
+    height: 200px;
     overflow: auto;
 }
 
@@ -61,10 +62,14 @@
 
 /************************************/
 .right {
-    width: 77%;
+    margin-left: 140px;
+    min-height: 300px;
+    width: 100%;
 }
 
-.top {}
+.top {
+    width: 100%;
+}
 
 .attr {
     display: flex;
@@ -73,7 +78,7 @@
 .type,.ttl {
     padding: 8px;
     background-color: #192955;
-    margin-right: 20px;
+    margin-right: 8px;
 }
 
 .type span,.ttl span{
@@ -84,7 +89,8 @@
 
 .op {
     display: flex;
-    margin-top: 10px;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .vas,.reload,.copy,.del,.save {
@@ -108,3 +114,14 @@
 .del {}
 
 .save {}
+
+/**************************/
+.view{
+    word-break: break-all;
+    color: #9EA3A8;
+    background-color: #192955;
+    margin-top: 20px;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px black;
+}
