--- a/src/components/page/content/redis/parts/client/body/style.css
+++ b/src/components/page/content/redis/parts/client/body/style.css
@@ -22,6 +22,19 @@
     margin: 0;
 }
 
+.inol{
+    overflow: auto;
+    height: 600px;
+}
+
+.inol::-webkit-scrollbar{}
+.inol::-webkit-scrollbar-button{}
+.inol::-webkit-scrollbar-track{}
+.inol::-webkit-scrollbar-track-piece{}
+.inol::-webkit-scrollbar-thumb{}
+.inol::-webkit-scrollbar-corner{}
+.inol::-webkit-resizer{}
+
 .dbol li,.inol li{
     display: flex;
     margin-bottom: 10px;
@@ -30,7 +43,7 @@
 
 .dbol li span,.inol li span{
     text-align: center;
-    width: 30%;
+    width: 20%;
     color: #9EA3A8;
 }
 
@@ -47,4 +60,20 @@
     background-color: #061539;
     cursor: pointer;
     outline: none;
+}
+
+.part_ol{
+    width: 100%;
+}
+
+.part_title{
+    text-align: left !important;
+    font-weight: 900;
+    font-size: 16px;
+    width: 40% !important;
+}
+
+.part_v{
+    text-align: left !important;
+    width: 40% !important;
 }
