--- a/src_v2/assets/style/redis/redis-body.css
+++ b/src_v2/assets/style/redis/redis-body.css
@@ -1,4 +1,14 @@
-.body{
+.body {
     width: 100%;
     display: flex;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to {
+    opacity: 0;
 }
