--- a/src_v2/assets/style/app-body.css
+++ b/src_v2/assets/style/app-body.css
@@ -2,3 +2,13 @@
     width: 100%;
     display: flex;
 }
+
+.message-enter-active,
+.message-leave-active {
+    transition: right .5s;
+}
+
+.message-enter,
+.message-leave-to {
+    right: -285px;
+}
