--- a/src_v2/assets/style/common/i-button.css
+++ b/src_v2/assets/style/common/i-button.css
@@ -5,9 +5,8 @@ button{
     vertical-align: middle;
     font-weight: normal;
     border-radius: 3px;
-    border: 1px solid #061539;
+    border: 1px solid;
     color: #9EA3A8;
-    background-color: #061539;
     cursor: pointer;
     outline: none;
     width: 100%;
