--- a/src_v2/assets/style/redis/redis-connection-add.css
+++ b/src_v2/assets/style/redis/redis-connection-add.css
@@ -6,7 +6,7 @@
     background-color: #304473;
     box-shadow: 0 0 10px black;
     border-radius: 10px;
-    width: 300px;
+    width: 400px;
     padding: 20px;
     padding-bottom: 15px;
     padding-top: 15px;
@@ -29,13 +29,13 @@
 
 .row{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-top: 15px;
     align-items: center;
 }
 
 .label{
-    width: 20%;
+    width: 25%;
     text-align: left;
 }
 
@@ -45,7 +45,7 @@
 }
 
 .input{
-    width: 80%;
+    width: 75%;
 }
 
 .footer{
@@ -67,4 +67,24 @@
 .submit{
     width: 60px;
     margin-left: 20px;
+}
+
+.gap{
+    margin-top: 15px;
+    height: 30px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-bottom: 1px solid #031234;
+}
+
+.gap span{
+    FONT-WEIGHT: 600;
+    color: #9ca4b6;
+    font-size: 15px;
+}
+
+.body-tsl,.body-ssh{
+    margin-right: 10px;
+    margin-left: 10px;
 }
