--- a/src_v2/assets/style/common/connections.css
+++ b/src_v2/assets/style/common/connections.css
@@ -51,3 +51,35 @@
     background-color: #031234;
     border-radius: 20px;
 }/*滚动条上的滚动滑块.*/
+
+.new{
+    position: absolute;
+    top:10px;
+    z-index: 1;
+    left: 0px;
+}
+
+.new-type{
+    background-color: #102354;
+    width: 130px;
+    box-shadow: 0 0 10px black;
+    border-radius: 5px;
+}
+
+.new-folder,.new-connect{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.new-folder:hover,.new-connect:hover{
+    background-color: #031234;
+}
+
+.new-folder img,.new-connect img{
+    width: 20px;
+    height: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
